@@ -254,9 +254,9 @@ webkit2_sources += \
 	Source/WebKit2/Platform/CoreIPC/DataReference.h \
 	Source/WebKit2/Platform/CoreIPC/HandleMessage.h \
 	Source/WebKit2/Platform/CoreIPC/MessageID.h \
-	Source.WebKit2/Platform/CoreIPC/MessageReceiver.h \
-	Source.WebKit2/Platform/CoreIPC/MessageReceiverMap.cpp \
-	Source.WebKit2/Platform/CoreIPC/MessageReceiverMap.h \
+	Source/WebKit2/Platform/CoreIPC/MessageReceiver.h \
+	Source/WebKit2/Platform/CoreIPC/MessageReceiverMap.cpp \
+	Source/WebKit2/Platform/CoreIPC/MessageReceiverMap.h \
 	Source/WebKit2/Platform/CoreIPC/MessageSender.h \
 	Source/WebKit2/Platform/CoreIPC/unix/AttachmentUnix.cpp \
 	Source/WebKit2/Platform/CoreIPC/unix/ConnectionUnix.cpp \
@@ -1217,9 +1217,9 @@ webkit2_plugin_process_sources += \
 	Source/WebKit2/Platform/CoreIPC/DataReference.h \
 	Source/WebKit2/Platform/CoreIPC/HandleMessage.h \
 	Source/WebKit2/Platform/CoreIPC/MessageID.h \
-	Source.WebKit2/Platform/CoreIPC/MessageReceiver.h \
-	Source.WebKit2/Platform/CoreIPC/MessageReceiverMap.cpp \
-	Source.WebKit2/Platform/CoreIPC/MessageReceiverMap.h \
+	Source/WebKit2/Platform/CoreIPC/MessageReceiver.h \
+	Source/WebKit2/Platform/CoreIPC/MessageReceiverMap.cpp \
+	Source/WebKit2/Platform/CoreIPC/MessageReceiverMap.h \
 	Source/WebKit2/Platform/CoreIPC/MessageSender.h \
 	Source/WebKit2/Platform/CoreIPC/unix/AttachmentUnix.cpp \
 	Source/WebKit2/Platform/CoreIPC/unix/ConnectionUnix.cpp \
